# gp

./: .gitignore  .travis.yml  CMakeLists.txt  README.md
cmake/: Dependencies.cmake  Utils.cmake
cmake/Modules/: FindEigen3.cmake  FindGurobi.cmake  FindMininet.cmake  Findmatplotpp.cmake
documentation/: Doxyfile  publish_documentation.sh
documentation/html/: _r_e_a_d_m_e_8md_source.html  annotated.html  classes.html  classgp_1_1_gaussian_process-members.html  classgp_1_1_gaussian_process.html  classgp_1_1_kernel-members.html  classgp_1_1_kernel.html  classgp_1_1_plot1_d-members.html  classgp_1_1_plot1_d.html  classgp_1_1_rbf_kernel-members.html  classgp_1_1_rbf_kernel.html  classgp_1_1_training_log_likelihood-members.html  classgp_1_1_training_log_likelihood.html  cost__functors_8hpp_source.html  dir_026fda88393f8f0065789627eb0a0306.html  dir_40856f0cdd4bcafd28810d9265a200f7.html  dir_48d4a7ba705dfb475b056ce54adff911.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_821002d4f10779a80d4fb17bc32f21f1.html  dir_c0cd66d8ddae4fc5bc5dc2f24e29763b.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_f2fd8bd6424c93166d6dd5f2b70706e7.html  files.html  gaussian__process_8cpp_source.html  gaussian__process_8hpp_source.html  hierarchy.html  index.html  kernel_8hpp_source.html  menudata.js  plot__1d_8hpp_source.html  rbf__kernel_8cpp_source.html  rbf__kernel_8hpp_source.html  types_8hpp_source.html
documentation/latex/: annotated.tex  classgp_1_1_gaussian_process.tex  classgp_1_1_kernel.tex  classgp_1_1_plot1_d.tex  classgp_1_1_rbf_kernel.tex  hierarchy.tex  index.tex  (+10 more)
exec/: CMakeLists.txt
include/: cost_functors.hpp  gaussian_process.hpp  kernel.hpp  rbf_kernel.hpp  types.hpp
src/: gaussian_process.cpp  rbf_kernel.cpp
test/: CMakeLists.txt  test_function_approx.cpp  test_functions.cpp  test_functions.hpp  test_kernel.cpp  test_learn_hyperparams.cpp  test_main.cpp  test_plotting.cpp  test_plotting.hpp
(+15 files in other folders)
